[package]
name = "fly-io-experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["tracing"] }
cronet-rs = { git = "https://github.com/sleeyax/cronet-rs", version = "0.0.1" }
hyper = { version = "1.2.0", features = [] }
hyper-util = { version = "0.1.3", features = ["tokio", "server-auto", "http1"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
